//--------------------------------------------------------------
// name  : 协议中的对象集合
//--------------------------------------------------------------

syntax = "proto3";                 // protobuf3 系列必须在前面加前缀
package protocol;                  // 统一package
option cc_generic_services = true; // 开启grpc

// 职位对象
message Job{
    string JobAddress = 1; // 工作的地址
    string Role       = 2; // 角色
    uint32 Count      = 3; // 数量
    uint64 Radio      = 4; // 分账比例
    // uint64 IssueRadio = 5;
    string Company    = 6; // 公司
    int64  TimeStamp  = 7; // 时间戳
    bool   HasApply   = 8; // 是否申请过（true为已经申请过）
    int32  JobId      = 9; // 职位id
    string FatherAddr = 10; // 职位发布者id
    repeated string WhiteList  = 11; // 白名单
    string WhiteName =12;
}

// 工作单位
message Unit{
    string Role      = 1; // 角色
    string Company   = 2; // 组织
    string Location  = 3; // 上班地点
    uint32 StartTime = 4; // 开始时间时间戳
    uint32 EndTime   = 5; // 结束时间时间戳
}

// 排班
message Schedule  {
    string   Jobaddr       = 1; // 排班Address
    repeated Job Jobs      = 2; // schedule
    int64    TimeStamp     = 3; // 时间时间戳
    string   CompanyName   = 4; // 公司名
    int64    CompanyRatio  = 5; // 公司分账比例
    string   FatherAddress = 6; // 发布者地址
}

// 申请人信息
message scheduleStaff {
     string StaffAddr   = 1; // 申请人账户地址
     string Role        = 2; // 申请人角色
     uint64 Ratio       = 3; // 申请人分账
     int64  JobId       = 4; // 职位id
     string FatherAddr  = 5; // 职位发布者id
 }

// 订单信息
message Order {
    uint32  Table      = 1; // 桌号
    int64   TimeStamp  = 2; // 下单时间
    double  Money      = 3; // 价钱
    string  OrderId    = 4; // 订单号
    string  Content    = 5; // 訂單內容
    double  GetMoney   = 6; // 某一用户分账信息，大部分情况下没有
    string  JobAddress = 7; // 工作的地址
}

// 好友信息
message Friend {
    string Name     = 1;
    string Phone    = 2;
    string Address  = 3;
}